--- a/leave.yml
+++ b/leave.yml
@@ -2,7 +2,7 @@ server:
   port: 8000
 spring:
   profiles:
-    active: "dev"
+    active: "default"
   application:
     name: "leave"
   devtools:
