--- a/leave.yml
+++ b/leave.yml
@@ -13,7 +13,7 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
-    username: sa
+    username: sw
     password: ''
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
