--- a/report.yml
+++ b/report.yml
@@ -2,9 +2,9 @@ server:
   port: 8001
 spring:
   application:
-    name: "employee-microservice"
+    name: "report_service"
   profiles:
-    active: "dev"
+    active: "default"
   devtools:
     livereload:
       enabled: true
