--- a/employee.yml
+++ b/employee.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: "employee-microservice"
   profiles:
-    active: "dev"
+    active: "default"
   devtools:
     livereload:
       enabled: true
