--- a/leave-qa.yml
+++ b/leave-qa.yml
@@ -1,16 +1,6 @@
 server:
   port: 8001
 spring:
-  application:
-    name: "leave"
-  profiles:
-    active:"qa"
-    
-  devtools:
-    livereload:
-      enabled: true
-    restart:
-      enabled: true
   datasource:
     url: jdbc:h2:mem:qadb
     driverClassName: org.h2.Driver
@@ -18,6 +8,7 @@ spring:
     password: ''
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    ddl-auto: update
   h2:
     console:
       enabled: true
