--- a/leave-qa.yml
+++ b/leave-qa.yml
@@ -17,7 +17,8 @@ spring:
     username: sa
     password: ''
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.
+    ddl-auto: update
   h2:
     console:
       enabled: true
