--- a/leave-qa.yml
+++ b/leave-qa.yml
@@ -14,7 +14,7 @@ spring:
     username: sa
     password: ''
   jpa:
-    database-platform: org.hibernate.dialect.
+    database-platform: org.hibernate.dialect.H2Dialect
     ddl-auto: update
   h2:
     console:
