--- a/report.yml
+++ b/report.yml
@@ -11,7 +11,7 @@ spring:
     restart:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:employee-db
+    url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: admin
     password: ''
