--- a/report-qa.yml
+++ b/report-qa.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     url: jdbc:h2:mem:qadb
     driverClassName: org.h2.Driver
-    username: admin
+    username: sa
     password: ''
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
