--- a/leave.yml
+++ b/leave.yml
@@ -17,6 +17,7 @@ spring:
     password: ''
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
   h2:
     console:
       enabled: true
