--- a/employee.yml
+++ b/employee.yml
@@ -1,6 +1,9 @@
 server:
   port: 8001
 spring:
+  sql:
+    init:
+      mode: always
   application:
     name: "employee-microservice"
   devtools:
